# speedstack-template

./: .env.example  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/2022-02-03-001119_placeholder/: down.sql  up.sql
backend/src/: graphql.rs  main.rs
backend/src/db/: mod.rs  schema.rs
backend/src/entities/: mod.rs  placeholder.rs
backend/src/resolvers/: mod.rs  placeholder.rs
frontend/: .prettierrc.json  Dockerfile  package.json
frontend/src/components/styles/: GlobalStyle.ts  theme.ts
frontend/src/graphql/: placeholder.graphql
frontend/src/lib/: withApollo.tsx
frontend/src/pages/: _app.tsx  index.tsx  placeholders.tsx
