[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
env_logger = "0.8"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"
juniper = "0.15"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
diesel_migrations = "1.4.0"
openssl = "0.10.38"
